scrolling regression fixed. padding bottom for fixed panel to be not covering scrollable text.

--- a/public/chat_client.css
+++ b/public/chat_client.css
@@ -21,7 +21,7 @@ form#send_message_form {
     max-height: 100vh;
 }
 #message_log{
-    padding-bottom: 3.5em;
+    padding-bottom: calc(2em + 13vw);
 }
 body{
     margin: 0;
